Changed Random Method.